src/styles/overlay-panel.less
body.overlay-open {
  &,
  .landing,
  .landing-side-bar {
    overflow: hidden;
  }
}

.catalogs-overlay-modal {
  display: block;
  .modal-backdrop {
    &.ng-enter {
      animation: modalBackdropIn 0.15s ease-out forwards;
    }
    &.ng-leave {
      animation: modalBackdropOut .45s ease-out forwards;
    }
  }
}

.catalogs-overlay-panel {
  margin: 0 auto;
  max-width: 900px;
  position: relative;

  .wizard-pf-contents {
    flex: 1 1 auto;
  }

  .wizard-pf-main {
    display: flex;
    overflow-y: auto;
    padding: 0;
    .scroll-shadows-vertical();
    _::-webkit-full-page-media, _:future, :root & { // only target Safari
      .scroll-shadows-vertical-with-covers(65%, 0.25);
    }
    @media(max-width: @screen-xs-max) {
      max-height: calc(100vh ~"-" 234px);
    }
    @media(min-width: @screen-sm-min) {
      height: @order-service-page-height + @grid-gutter-width;
      max-height: calc(100vh ~"-" @order-service-wizard-min-external-height);
      min-height: 200px;
      overflow-y: auto;
    }
  }

  .wizard-pf-main-form-contents {
    position: relative; // so label.required:before are positioned correctly
    label.required:before {
      left: -10px;
    }
  }

  .wizard-pf-main-inner-shadow-covers {
    min-height: 100%;
    padding: (@grid-gutter-width / 2);
    .scroll-shadows-vertical-covers();
    _::-webkit-full-page-media, _:future, :root & { // only target Safari
      background: none;
    }
    @media(min-width: @screen-sm-min) {
      padding-left: @grid-gutter-width;
      padding-right: @grid-gutter-width;
    }
    // so that input and textarea form-controls don't mask the inner scroll shadows
    input, textarea {
      &.form-control {
        background-color: transparent;
        // so that disabled or readonly form-controls get the correct bg-color
        &[disabled],
        &[readonly] {
          background-color: rgba(234, 234, 234, 0.5);
        }
      }
    }
  }

  .wizard-pf-row {
    // PatternFly sets this to control the height of the wizard, but our layout
    // is more complex, so we disable the max-height
    max-height: none;
  }
}

.catalogs-overlay-panel-close {
  color: @color-pf-black-600;
  cursor: pointer;
  font-size: 21px;
  position: absolute;
  right: 20px;
  top: 15px;

  &.pficon-close {
    color: @color-pf-black-600;
    cursor: pointer;
  }
  &.pficon-close.disabled, .pficon-close:hover.disabled  {
    color: @color-pf-black-400;
    cursor: not-allowed;
  }
  &.pficon-close:hover {
    color: @color-pf-black-800;
  }
}

.catalogs-overlay-panel-grow-height {
  // only adding padding to the overlay panel if the viewport is taller than the panel plus the padding
  @media(min-height: 545px) and (min-width: @screen-sm-min) { // 465px (height of Safari in iPhone SE) + 80px (padding)
    padding: @navbar-pf-height 0 (@grid-gutter-width / 2);
  }
}

.catalogs-overlay-panel-wrapper {
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: @zindex-modal;
  &.ng-enter {
    animation: modalSlideDown 0.3s ease-out forwards;
  }
  &.ng-leave {
    animation: modalSlideUp 0.2s ease-out forwards;
  }
}

